processed/gerrit/txt/58342.txt
Change:     58342
Subject:    LU-18785 build: ofd, ptlrpc missing prototypes
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/58342
Change-Id:  Ie846dfae7ceb511318ab4ccd9494a633129c2c4d
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Shaun Tancheff
Created:    2025-03-08 03:51:16.000000000
Updated:    2025-03-19 23:35:14.000000000
Patch Set:  3
Insertions: +3
Deletions:  -2
Comments:   2 (0 unresolved)

--- Labels ---
  Code-Review: James Simmons: +1; Arshad Hussain: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Arshad Hussain, Timothy Day

--- Commit Message ---
LU-18785 build: ofd, ptlrpc missing prototypes

nodemap_range.c:271:6: error: no previous prototype
  for '__range_delete' [-Werror=missing-prototypes]
  271 | void __range_delete(struct nodemap_range_tree *nm_range_tree,
      |      ^~~~~~~~~~~~~~

ofd_oss.c:430:5: error: no previous prototype for 'oss_mod_init'
  [-Werror=missing-prototypes]
  430 | int oss_mod_init(void)
      |     ^~~~~~~~~~~~

Test-Parameters: trivial
Fixes: 0ea23e01945 ("LU-13307 nodemap: have nodemap_add_member support large NIDs")
Fixes: b84f014d733 ("LU-14291 ofd: merge ost module into ofd")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: Ie846dfae7ceb511318ab4ccd9494a633129c2c4d
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58342
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>

--- Review History ---

--- Message (Shaun Tancheff, 2025-03-08 03:51:16.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-03-08 03:55:57.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2025-03-08 04:30:55.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/111599/ : SUCCESS

--- Message (Timothy Day, 2025-03-08 18:57:50.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2025-03-08 20:26:10.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Arshad Hussain, 2025-03-10 08:41:07.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Shaun Tancheff, 2025-03-18 17:54:29.000000000) ---
Uploaded patch set 2: Patch Set 1 was rebased.

--- Message (wc-checkpatch, 2025-03-18 17:55:45.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (jenkins, 2025-03-18 18:37:00.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/111827/ : SUCCESS

--- Message (Oleg Drokin, 2025-03-19 23:35:11.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2025-03-19 23:35:14.000000000) ---
Change has been successfully cherry-picked as 2d1efde7f4dec9ca28ce4d82cabc9690d465dc75 by Oleg Drokin
